@@ -1,5 +1,9 @@
 2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>
 
+	* Makefile: added new targets `clean-dist` and `clean-pyc`.
+
+2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>
+
 	All .py files now have a coding set to utf-8.
 
 2015-12-22 Siddharth Ravikumar <sravik@bgsu.edu>
